--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "asyncblock": "^2.2.12",
-    "jquery": "3.3.1",
+    "jquery": ">=3.4.0",
     "mkdirp": "0.3.0"
   },
   "devDependencies": {
